--- a/evewspace/core/templates/base.html
+++ b/evewspace/core/templates/base.html
@@ -16,8 +16,10 @@
 			{%block header%}{%endblock%}
 		</div>
 
-		<div id="baseNavdiv" class="navigation">
-			{%block navigation %}{%endblock%}
+		<div id="baseNavdiv" class="navdiv">
+			<ul id="nav">
+				{%block navigation %}{%endblock%}
+			</ul>
 		</div>
 
 		<div id="baseContentHeadDiv" class="contenthead">
