Add draft nav structure.
Added navigation templates to most apps. Included them in the base.html
template.

TODO: Map navigation will require custom template tags.

--- a/evewspace/core/templates/base.html
+++ b/evewspace/core/templates/base.html
@@ -18,6 +18,14 @@
 
 		<div id="baseNavdiv" class="navdiv">
 			<ul id="nav">
+				{% include "map_nav.html" %}
+				{% include "sitetracker_nav.html" %}
+				{% include "cart_nav.html"%}
+				{% include "jabber_nav.html" %}
+				{% include "pos_nav.html"%}
+				{% include "recruitment_nav.html" %}
+				{% include "api_nav.html" %}
+				{% include "account_nav.html" %}
 				{%block navigation %}{%endblock%}
 			</ul>
 		</div>
