Added home landing page.
Added a home landing page for users without a default map set. Also
modified base.css to make the navbar work better and added a context
processor to return the host name for requesting IGB trust.

--- a/evewspace/core/static/css/base.css
+++ b/evewspace/core/static/css/base.css
@@ -8,6 +8,7 @@
 {
 	float:left;
 	width: 100%;
+	padding: 0px 0px 10px 0px;
 }
 
 .contenthead
@@ -35,9 +36,9 @@
 	padding: 7px 6px 0;
 	height: 1em;
 	line-height:100%;
-	float: left;
-	position: relative;
-	left:30%;
+	
+	
+	
 	text-align: center; 
 }
 #nav li {
