--- a/evewspace/core/templates/home.html
+++ b/evewspace/core/templates/home.html
@@ -1,4 +1,26 @@
 {% extends "base.html" %}
 {% block title %} Eve W-Space: Home {% endblock %}
-{% block contentheader %} Welcome, {{user.username}}! {% endblock %}
-{% block content%} {{SITE_URL}} {%endblock%}
+{% block head %}
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/home.css" />
+{% endblock %}
+{% block header %}
+<img src="{{STATIC_URL}}images/webtitle.png">
+{% endblock %}
+{% block contentheader %} <h2> Welcome, {{user.username}}!</h2> {% endblock %}
+{% block content%} 
+<div class="homegridleft">
+<br />
+{% load posstatus %}
+<h3>My POSes:</h3><br/>
+{% myposstatus user %}
+<h3>Corp POSes:</h3><br />
+{% corpposstatus user %}
+<br />
+<h2>Claims Status</h2>
+</div>
+<div class="homegridright">
+<h2>Upcoming Events</h2>
+<br />
+<h2>Cart Status</h2>
+</div>
+{%endblock%}
