--- a/evewspace/API/templates/apicalendar_detail.html
+++ b/evewspace/API/templates/apicalendar_detail.html
@@ -1,7 +1,8 @@
 <li>
 	<h3 class="calendarevent_head" style="position:relative">{% if event.importance == 1 %} ! {% endif %} From {% if event.ownerName != "" %} {{event.ownerName}}{% else %}CCP{% endif %} {{event.eventTitle}}</h3>
 	<div class="calendarevent_detail">
-		<span class="calendarevent_time">Time: {{event.eventDate}}</span><br />
+		{% load apicalendar %}
+		<span class="calendarevent_time">Time: {% timestamp event.eventDate %}</span><br />
 		<span class="calendarevent_response">Response: {{event.response}}</span><br />
 		<span class="calendarevent_text">{% autoescape off %}Text: {{event.eventText}} {% endautoescape %}</span>
 	</div>
