Add various map functions. Add jquery-ui.
Added code for adding maps and systems. Also added helper functions
for getting JSON representations of systems and wormholes for a map.

--- a/evewspace/Map/templates/map_list.html
+++ b/evewspace/Map/templates/map_list.html
@@ -1,3 +1,3 @@
-{% for map in maplist %}
-<li><a href="#">{{map.name}}</a></li>
+{% for map in maps %}
+<li><a href="{% url Map.views.get_map map.pk %}">{{map.name}}</a></li>
 {% endfor %}
