User Registration first pass.
Add basic user registration form. Add regcode to group profile. Register
new users in their groups based on regcode.

--- a/evewspace/core/templates/base.html
+++ b/evewspace/core/templates/base.html
@@ -11,6 +11,7 @@
             $.ready(function(){
                 CCPEVE.requestTrust('{{SITE_URL}}');
             });
+        </script>
 		{% block scripts %}{%endblock%}
 		{% block head %}{%endblock%}
 	</head>
