--- a/evewspace/core/templates/home.html
+++ b/evewspace/core/templates/home.html
@@ -36,6 +36,9 @@
 	<div>
 		{% upcomingevents user %}
 	</div>
-	<h2>Cart Status</h2>
+    <h2>Vital Statistics</h2>
+    <div>
+        <b>Time since last Legion loss by James:</b> 12 minutes
+    </div>
 </div>
 {%endblock%}
