--- a/evewspace/account/static/css/login.css
+++ b/evewspace/account/static/css/login.css
@@ -30,7 +30,24 @@
 	padding: 10px 0px 10px 20px;
 	text-align: center;
 }
-
+.registerBox
+{
+    color: #C8C8C8;
+    background-image: url('../images/logInPnl.png');
+    background-repeat: repeat;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius:20px;
+    -webkit-border-radius: 20px;
+    max-width: 300px;
+    border: thin solid #CDCDCD;
+    padding: 20px 20px 20px 20px;
+    text-align: left;
+}
+.registerBox li
+{
+    margin-bottom: 10px
+}
 body
 {
 	background-position: center top;
