--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -17,5 +17,7 @@
 {% endblock %}
 {% block content %}
 <div id="sysInfoDiv" class="sysInfoDiv">
+    <a name="sysInfo"></a>
 </div>
 {% endblock %}
+
