--- a/evewspace/SiteTracker/templates/sitetracker_nav.html
+++ b/evewspace/SiteTracker/templates/sitetracker_nav.html
@@ -1,5 +1,5 @@
 {% if perms.SiteTracker.can_sitetracker %}
-	<li><a href="#">SiteTracker</a><ul>
+	<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">SiteTracker</a><ul class="dropdown-menu">
 		<li><a href="#">My Sites</a></li>
 		<li><a href="#">Claims</a></li>
 		<li><a href="#">Payouts</a></li>
