--- a/evewspace/API/templates/api_nav.html
+++ b/evewspace/API/templates/api_nav.html
@@ -1,5 +1,5 @@
 {% if perms.API.key_required %}
-<li><a href="#">API</a><ul>
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">API</a><ul class="dropdown-menu">
 	<li><a href="#">My API Keys</a></li>
 	{% if perms.API.audit_keys %}
 		<li><a href="#">Audit API Keys</a></li>
