--- a/evewspace/Cart/templates/cart_nav.html
+++ b/evewspace/Cart/templates/cart_nav.html
@@ -1,5 +1,5 @@
 {% if perms.Cart.can_cart %}
-	<li><a href="#">Cart</a><ul>
+	<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cart</a><ul class="dropdown-menu">
 		<li><a href="#">My Cart</a></li>
 		<li><a href="#">View Requests</a></li>
 	</ul></li>
