--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -2,3 +2,70 @@
 {
     margin-top:10px;
 }
+.systemPanelHeader
+{
+    text-align:center;
+    margin-left: 20px;
+}
+.footer
+{
+    margin-bottom: 150px;
+}
+.systemTooltip
+{
+    width: 300px;
+    display: none;
+}
+.popover
+{
+    width: 300px;
+}
+.occupiedText
+{
+    text-align: left;
+}
+.infoText
+{
+    text-align: left;
+}
+.infoTitle
+{
+    text-align: center;
+}
+.occupiedTitle
+{
+    text-align: center;
+}
+.tip {
+  background: #eee;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  position: relative;
+  width: auto;
+}
+
+/* arrows - :before and :after */
+.tip:before {
+  position: absolute;
+  display: inline-block;
+  border-top: 7px solid transparent;
+  border-right: 7px solid #eee;
+  border-bottom: 7px solid transparent;
+  border-right-color: rgba(0, 0, 0, 0.2);
+  left: -14px;
+  top: 20px;
+  content: '';
+}
+
+.tip:after {
+  position: absolute;
+  display: inline-block;
+  border-top: 6px solid transparent;
+  border-right: 6px solid #eee;
+  border-bottom: 6px solid transparent;
+  left: -12px;
+  top: 21px;
+  content: '';
+}
