--- a/evewspace/Map/templates/map_nav.html
+++ b/evewspace/Map/templates/map_nav.html
@@ -1,4 +1,4 @@
-<li><a href="#">Map</a><ul>
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Map</a><ul class="dropdown-menu">
 		{% load mapnav %}
 		{% mapnavlist user %}
         <li><a href="{% url Map.views.create_map %}">Add Map</a></li>
