--- a/evewspace/POS/templates/pos_nav.html
+++ b/evewspace/POS/templates/pos_nav.html
@@ -1,4 +1,4 @@
-<li><a href="#">POS</a><ul>
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">POS</a><ul class="dropdown-menu">
 	<li><a href="#">My Towers</a></li>
 	<li><a href="#">Add POS</a></li>
 	<li><a href="#">POS Database</a></li>
