--- a/evewspace/Recruitment/templates/recruitment_nav.html
+++ b/evewspace/Recruitment/templates/recruitment_nav.html
@@ -1,5 +1,5 @@
 {% if perms.Recruitment.can_recruit %}
-	<li><a href="#">Recruitment</a><ul>
+	<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Recruitment</a><ul class="dropdown-menu">
 		<li><a href="#">Open Applications</a></li>
 		<li><a href="#">Deferred Applications</a></li>
 		<li><a href="#">Closed Applications</a></li>
