--- a/evewspace/core/templates/home.html
+++ b/evewspace/core/templates/home.html
@@ -43,7 +43,7 @@
     <div class="span6 homecollapse">
         <h3>Vital Statistics</h3>
     <div>
-        <b>Time since last Legion loss by James:</b> 12 minutes
+        <b>Time since last Legion loss by James:</b> [Placeholder]
  
     </div>
 </div>
