Fix wormhole tooltip CSS class to set display: none

--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -16,6 +16,11 @@
     width: 300px;
     display: none;
 }
+.wormholeTooltip
+{
+    width: 200px;
+    display: none;
+}
 .popover
 {
     width: 300px;
