--- a/evewspace/Map/templates/system_tooltip.html
+++ b/evewspace/Map/templates/system_tooltip.html
@@ -5,10 +5,10 @@
             <strong>Class: {{system.sysclass}}</strong>
         </div>
         <div>
-            <strong>Effect: {{specialsys.effect}}</strong>
+            <strong>Effect: {{system.effect}}</strong>
         </div>
         <div>
-            <strong>Probable Statics: {{specialsys.static1}} {% if specialsys.static2 %}{{specialsys.static2}} {% endif %}</strong>
+            <strong>Probable Statics: {{system.static1}} {% if system.static2 %}{{system.static2}} {% endif %}</strong>
         </div>
         {% endif %}
         {% if system.sysclass = 7 %}
