--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -51,7 +51,7 @@
     <span class="sysLastScanned label {% if scanwarning  %} label-warning {% endif %}">
         Last Scanned: {{system.lastscanned|date:"Y-m-d H:i"}}
     </span> &nbsp 
-    <i id="markScanned" onclick="MarkScanned({{system.pk}}, true);" class="icon-refresh" title="Mark Scanned"></i>
+    <i id="markScanned" onclick="MarkScanned({{mapsys.pk}}, true);" class="icon-refresh" title="Mark Scanned"></i>
     <br />
     <br />
     <p class="occupiedText label label-important"><i class="icon-pencil" title="Edit"></i> <span class="occupiedTitle">Occupied:</span> <br /> {{system.occupied|safe}}</p>
